Sonar toList()